--- a/angular-frontend/invoicing-app/src/app/app.component.html
+++ b/angular-frontend/invoicing-app/src/app/app.component.html
@@ -51,7 +51,7 @@
         </td>
         <td><input [(ngModel)]="newCompany.healthInsurance" type="text" class="form-control" name="healthInsurance">
         </td>
-        <td><input (click)="addCompany()" type="button" class="btn btn-primary" value="Add company"></td>
+        <td><input (click)="addCompany()" type="button" class="btn btn-primary" value="Add company" id="addCompanyBtn"></td>
     </tr>
 
 </table>
